添加全局字体

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,13 +1,14 @@
 .header {
-  margin-top: 2em
   display: flex
+  height: 60px
   align-items: baseline
   justify-content: space-between
+  background-color: #222
 
   .blog-title .logo {
     color: #AAA;
-    font-size: 2em;
-    font-family: "Comic Sans MS",cursive,LiSu,sans-serif;
+    font-size: 20px;
+    margin-left: 20px;
     text-decoration: none;
   }
 
