--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -2,11 +2,17 @@ body {
   background-color: #F2F2F2;
   font-size: 1.25rem;
   line-height: 1.5;
+  font-family: "Alimama";
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
+}
+
+@font-face {
+  font-family: 'Alimama';
+  src: url("../font/AlimamaFangYuanTiVF-Thin.ttf");
 }
 
 @import "_partial/header";
